# LiTren

./: .env.example  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  ER_Diagram.wsd  db.sql  docker-compose.yml  pyproject.toml  seed_data.py  seed_data.sql  triggers.sql
backend/api/: main.py
backend/api/core/: config.py  db.py  deps.py  exceptions.py  ml.py
backend/api/repos/: catalog.py  users.py
backend/api/routers/: carts.py  catalog.py  media.py  orders.py  users.py
backend/api/schemas/: catalog.py  users.py
frontend/: .env.example  nginx.conf  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.svelte  app.css  vite-env.d.ts
frontend/src/api/: carts.ts  catalog.ts  client.ts  orders.ts  users.ts
frontend/src/components/: AuthModal.svelte  BookCard.svelte  ChatSearch.svelte  ConfirmDialog.svelte  GlobalLoader.svelte  OrderCard.svelte  OrderDetailModal.svelte  RatingStars.svelte  SkeletonCard.svelte  SkeletonCatalog.svelte  ToastContainer.svelte
frontend/src/components/admin/: AdminBookSection.svelte  AdminDashboard.svelte  AdminPersonSection.svelte  AdminSidebar.svelte  TaxonomySection.svelte
frontend/src/pages/: AdminPanel.svelte  BookDetail.svelte  Cart.svelte  Catalog.svelte  Home.svelte  Order.svelte  Profile.svelte
frontend/src/states/: cart.svelte.ts  ui.svelte.ts  user.svelte.ts
frontend/src/types/: catalog.ts  users.ts
