[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "faiss-cpu>=1.14.2",
    "faker>=40.15.0",
    "fastapi>=0.136.1",
    "onnxruntime>=1.26.0",
    "pydantic-settings>=2.14.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.28",
    "tokenizers>=0.23.1",
    "uvicorn>=0.46.0",
]
